syntax = "proto3";
package checkpoint;

option go_package = "/proto";

import "block.proto";
import "pos.proto";
import "poh.proto";

message Checkpoint {
    block.Block LastBlock = 1;
    pos.PosStakePool StakePool = 2;
    poh.LeaderSchedule ThisLeaderSchedule = 3;
    poh.LeaderSchedule NextLeaderSchedule = 4;
}
